tests/fixtures/invalid/pow_str_none_str.py
# Cannot call pow() with Str, None, Str
x = pow("hello", None, "hello")
